ADD more work to the item faq page

--- a/docs/de-de/modules/artikel/pages/faq-pim.adoc
+++ b/docs/de-de/modules/artikel/pages/faq-pim.adoc
@@ -13,6 +13,8 @@ zuletzt bearbeitet 25.05.22
 //ToDo - Maik und Brummi fragen, ob sie noch weitere FAQs haben
 //ToDo - alle Anker prüfen
 
+Text
+
 [#100]
 == Allgemeine Fragen
 
@@ -65,8 +67,18 @@ xref:artikel:suche.adoc#[Weitere Informationen].
 
 --
 
+Was macht ein bestimmtes Feld im Artikeldatensatz?
+
+Mein Mitarbeiter soll ausschließlich Zugriff auf die Artikeldaten haben (am besten da auch nur Beschreibungen und Bilder).
+
 [#200]
 == Preise
+
+Verkaufspreise - Bedingungen - something like that
+
+Aufträge manuell und Checkliste für die Verkaufspreise
+
+Mein Lieferant hat mir eine Datei mit neue EKs geschickt. Wie importiere ich diese neue EK-Preise?
 
 [.collapseBox]
 .*Ich will, dass plentymarkets meine Preise automatisch für mich berechnet. Geht das überhaupt?*
@@ -100,6 +112,8 @@ include::page$preise.adoc[tag=faq-strikethrough-price]
 
 --
 
+Wie mache ich einen Aktionspreis außer nur UVP? Text z.B. alter Preis
+
 [#300]
 == Attribute
 
@@ -107,29 +121,17 @@ include::page$preise.adoc[tag=faq-strikethrough-price]
 .*Merkmale, Eigenschaften und Attribute: Was ist der Unterschied?*
 --
 
-////
-nearly the same text is also found in the properties page - if changes are made, please change there too - change this to an include in the future
-////
-
-* xref:artikel:attribute.adoc#[Attribute] sind zum Beispiel die verschiedene Farben und Größen, in denen deine Produkte erhältlich sind.
-Mit Hilfe von Attributen kannst du deine Produkte charakterisieren und gleichzeitig auch verkaufbare Varianten erzeugen, wie z.B. ein T-Shirt in der Farbe rot und in Größe S.
-* Merkmale und Eigenschaften charakterisieren Produkte, ohne dabei verkaufbare Varianten zu erzeugen:
-** xref:artikel:eigenschaften.adoc#100[Merkmale] charakterisieren ganze Artikel.
-Ist also ein Artikel z.B. in rot, blau oder grün erhältlich, dann gilt das Merkmal für alle drei Varianten.
-Merkmale sind wenig flexibel, veraltet und werden schrittweise durch Eigenschaften ersetzt.
-** xref:artikel:eigenschaften.adoc#500[Eigenschaften] charakterisieren spezifische Varianten.
-Ist also ein Artikel z.B. in rot, blau oder grün erhältlich, dann kann die Eigenschaft für eine, zwei oder alle drei der Varianten gelten.
-Eigenschaften bieten daher mehr Flexibilität.
+include::page$attribute.adoc[tag=faq-attribute-property-characteristic]
 
 --
+
+Wenn ich Varianten anlegen will, werden all meine bereits angelegte Attribute gar nicht angezeigt. Warum?
 
 [.collapseBox]
 .*Meine Attribute lassen sich nicht löschen. Warum nicht?*
 --
 
-Bevor ein Attribut gelöscht werden kann, müssen alle mit dem Attribut verknüpften Varianten gelöscht werden.
-Du kannst bequem nach allen Varianten filtern, die mit einem Attribut verknüpft sind, und sie gesammelt löschen.
-xref:artikel:attribute.adoc#1100[Weitere Informationen und eine Schritt-für-Schritt-Anleitung].
+include::page$attribute.adoc[tag=faq-attribute-delete]
 
 --
 
@@ -145,15 +147,7 @@ include::page$attribute.adoc[tag=market-attribute-link]
 .*Ich habe versehentlich meine Attribute gelöscht. Kann ich sie wiederherstellen?*
 --
 
-Ja.
-Du kannst dein System jederzeit auf den Stand eines beliebigen Backups zurücksetzen.
-
-* Wähle in den Einstellungen zum Datenbank-Backup den Bereich *ItemAttribute*.
-Dies stellt die Attribute und Attributwerte im Menü *Einrichtung » Artikel » Attribute* wieder her.
-Die Attribute werden dabei nicht mit den einzelnen Varianten verknüpft.
-* Wähle in den Einstellungen zum Datenbank-Backup den Bereich *ItemVariation*, um die Verknüpfungen zusammen mit weiteren Variantendaten wiederherzustellen.
-
-xref:daten:backup.adoc#_backup_einspielen[Weitere Informationen und eine Schritt-für-Schritt-Anleitung].
+include::page$attribute.adoc[tag=faq-attribute-restore]
 
 --
 
@@ -161,85 +155,191 @@ xref:daten:backup.adoc#_backup_einspielen[Weitere Informationen und eine Schritt
 .*Kann ich meine Varianten nachträglich mit Attributen versehen?*
 --
 
-Nachträglich kannst du am Artikel keine neuen Attribute verknüpfen, sobald bereits welche hinterlegt sind.
-Du kannst nur den bestehenden Attributen neue Werte hinzufügen.
+include::page$attribute.adoc[tag=faq-add-attribute-existing-item]
 
-*_Beispiel_*:
-Stell dir vor, du verkaufst ein T-Shirt mit den Attributen Größe und Farbe.
-Konkret ist das T-Shirt in den Varianten "Rot/S", "Rot/L", "Blau/S" und "Blau/L" erhältlich.
+--
 
-* *_Was jetzt möglich ist_*:
-Du könntest neue Farb- und Größenvarianten hinzufügen.
-Beispielsweise könntest du die Varianten "Grün/S" und "Grün/L" hinzufügen.
-* *_Was nicht möglich ist_*:
-Du kannst keine neue Attribute ins Spiel bringen.
-Beispielsweise kannst du das Attribut "Material" nicht nachträglich hinzufügen.
-In diesem Fall empfehlen wir dir, einen neuen Artikel anzulegen, damit es keine Probleme mit offenen Bestellungen und vorhandenen Beständen gibt.
+Ich will Varianten erzeugen. Mir werden aber nicht alle Attribute zur Auswahl angeboten. Wo liegt der Fehler?
+
+[#300]
+== Eigenschaften
+
+[.collapseBox]
+.*Wie viele Eigenschaften kann ich maximal erstellen?*
+--
+
+include::page$eigenschaften.adoc[tag=faq-maximum-properties]
 
 --
 
 [.collapseBox]
-.*Das Bild soll sich im plentyShop ändern, je nachdem, welche Farbe der Kunde wählt*
+.*Ich finde meine Eigenschaft nicht im Artikeldatensatz. Wo ist sie?*
 --
 
-Soll sich das Artikelbild im plentyShop ändern, je nachdem, welche Größe oder Farbe dein Kunde wählt?
-Gehe wie folgt vor, wenn die passenden Bilder automatisch eingeblendet werden sollen.
-
-image::artikel:attribute-varianten-bilder-plentyshop.png[]
-
-[.instruction]
-Varianten mit den passenden Bilder verknüpfen:
-
-. Öffne das Menü *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Bilder*.
-. xref:artikel:artikel-verwalten.adoc#90[Lade die benötigten Bilder hoch].
-. Wähle die Bilder (icon:check-square[role="blue"]), die du verknüpfen möchtest.
-. Klicke auf icon:plus[role="green"] *Variantenverknüpfung*. +
-→ Es öffnet sich ein Pop-up-Fenster.
-. Verwende bei Bedarf die Filter links, um bestimmte Varianten zu finden.
-. Wähle die Varianten (icon:check-square[role="blue"]), die du mit den gewählten Bildern verknüpfen möchtest.
-. Klicke auf icon:check[role="green"] *Verknüpfen*. +
-→ Die Bilder werden mit den gewählten Varianten verknüpft.
-. *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen. +
-→ Wählt ein Kunde die Variante im plentyShop, sieht er automatisch das passende Artikelbild.
+include::page$eigenschaften.adoc[tag=faq-where-link-properties]
 
 --
 
 [.collapseBox]
-.*Ich will, dass Kunden auf eine Farbkachel im plentyShop klicken, um die Farbe zu wählen*
+.*Merkmale, Eigenschaften und Attribute: Was ist der Unterschied?*
 --
 
-Wie sollen Kunden Größen oder Farben in deinem plentyShop wählen?
-Sollen sie den Namen aus einer Dropdown-Liste wählen oder auf eine Bildkachel klicken?
-Führe die folgenden drei Schritte aus, wenn deine Attributwerte als Bilder angezeigt werden sollen.
-
-image::artikel:attributauswahl-per-bild.png[]
-
-[discrete]
-==== Schritt 1: Bilder für Attributwerte hochladen
-
-. Öffne das Menü *Einrichtung » Artikel » Attribute » [Attribut öffnen] » Tab: Werte*.
-. Klicke in der Spalte *Bild* auf *Bild hochladen* (icon:upload[set=plenty, role="purple"]).
-. Wähle das Bild von dem Speicherort deines Rechners aus. +
-→ Das Bild wird hochgeladen und eine Vorschau wird angezeigt.
-. Wiederhole die Schritte, um Bilder für andere Attributwerte hochzuladen.
-. *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
-
-[discrete]
-==== Schritt 2: Aussehen im plentyShop von Text zu Bild ändern
-
-. Öffne das Menü *Einrichtung » Artikel » Attribute » [Attribut öffnen] » Tab: Grundeinstellungen*.
-. Wähle unter *Attributauswahl im Webshop* die Option *Per Bild*.
-. *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
-
-[discrete]
-==== Schritt 3: Größe der Attributbilder ändern
-
-. Öffne das Menü *Einrichtung » Artikel » Bilder » Einstellungen*.
-. Gib im Bereich *Attributbilder* die maximale Höhe und Breite für die Bilder ein.
-. *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+include::page$attribute.adoc[tag=faq-attribute-property-characteristic]
 
 --
 
+[.collapseBox]
+.*Kann ich Eigenschaften zur Charakterisierung von Lagerorten und Kontakten verwenden?*
+--
+
+include::page$eigenschaften.adoc[tag=faq-property-types]
+
+--
+
+[.collapseBox]
+.*Was sind Bestelleigenschaften?*
+--
+
+include::page$eigenschaften.adoc[tag=faq-order-properties]
+
+--
+
+
+[.collapseBox]
+.*Kann ich Webshop-Filter anhand von Eigenschaften erstellen?*
+--
+
+include::page$eigenschaften.adoc[tag=faq-properties-filters]
+
+--
+
+[#500]
+== Beschreibungstexte und Bilder
+
+Wie viele Bilder kann ich pro Artikel haben?
+
+Maximumgröße eines Artikelbildes
+
+Wie kann ich steuern, welche Platzhalterbilder dargestellt werden? Diese Frage auch im plentyShop Bereich
+
+Ich will meine Bild-URLs personalisieren. Wie geht das?
+
+[.collapseBox]
+.*Ich will die Beschreibungstexte eines Artikels ändern. Wie mach ich das?*
+--
+
+
+--
+
+[.collapseBox]
+.*Kann ich variantenspezifische Texte hinterlegen?*
+--
+
+
+--
+
+[.collapseBox]
+.*Ich will viele Bilder hochladen. Wie mache ich das am effizientesten?*
+--
+
+
+--
+
+[.collapseBox]
+.*Kann sich das Bild im plentyShop ändern, je nachdem, welche Farbe ein Kunde wählt?*
+--
+
+include::page$attribute.adoc[tag=attribute-images-dynamic]
+
+--
+
+[#400]
+== Massenbearbeitung
+
+Mein Lieferant hat mir eine Datei mit neue EKs geschickt. Wie importiere ich diese neue EK-Preise?
+
+Was ist der Unterschied zwischen Gruppenfunktion und Stapelbearbeitung?
+
+[.collapseBox]
+.*Praxisbeispiel: Mein Hersteller hat ein Zubehörteil umbenannt. Wie ändere ich den Namen in allen Artikeltexten?*
+--
+
+
+--
+
+[.collapseBox]
+.*Praxisbeispiel: Ich muss die Transportkosten aller Artikel eines bestimmten Herstellers erhöhen. Wie mache ich das?*
+--
+
+
+--
+
+Ab wann bricht das Stapelverarbeitung ab?
+
+Wie schaut's aus mit FTP
+
+Ich verkaufe bereits auf Amazon, bin aber neu bei plentymarkets. Kann ich meine Artikeldaten von Amazon übernehmen?
+
+Ich verkaufe bereits auf eBay, bin aber neu bei plentymarkets. Kann ich meine Artikeldaten von eBay übernehmen?
+
+Gibt es Beispiele für den Import?
+-Videos
+-Artikel + Varianten
+-Kategorien
+-Eigenschaften
+-Facetten
+-usw,
+
+
+[#600]
+== Darstellung im plentyShop
+
+Merkblatt oder Broschüre als Download in Shop anbieten
+
+Cross-Selling
+
+Dropdown Text select a variation
+
+[.collapseBox]
+.*Warum ist mein Artikel im plentyShop nicht sichtbar?*
+--
+
+
+--
+
+[.collapseBox]
+.*Warum ist meine Kategorie im plentyShop nicht sichtbar?*
+--
+
+
+--
+
+[.collapseBox]
+.*Ich bin mit den Suchergebnissen im plentyShop nicht zufrieden. Wie kann ich sie besser machen?*
+--
+
+
+--
+
+[.collapseBox]
+.*Kann sich das Bild im plentyShop ändern, je nachdem, welche Farbe ein Kunde wählt?*
+--
+
+include::page$attribute.adoc[tag=attribute-images-dynamic]
+
+--
+
+[.collapseBox]
+.*Ich will, dass Kunden auf eine Farbkachel im plentyShop klicken, um die Farbe zu wählen. Wie geht das?*
+--
+
+include::page$attribute.adoc[tag=attribute-colour-tiles]
+
+--
+
+Wie viele Kategorie-Ebenen kann ich maximum im Shop haben?
+
+////
 [.collapseBox]
 .*Ich will meine eigenen Attributwerte mit den Werten eines Marktplatzes verknüpfen*
 --
@@ -304,101 +404,18 @@ include::page$attribute.adoc[tag=attribute-name-appearance-shop]
 include::page$attribute.adoc[tag=steps-attribute-value-name-translations]
 
 --
+////
 
-[#300]
-== Eigenschaften
+== Fragen zum Sortiment
 
-[.collapseBox]
-.*Wie viele Eigenschaften kann ich maximal erstellen?*
---
+Wie kann ich herauszufinden, welche Artikel am häufigsten verkauft werden?
 
-Du kannst bis zu 500 Varianteneigenschaften erstellen und mit Varianten verknüpfen.
+Ich will Produkte kombinieren und als eine Verkaufseinheit anbieten. Wie mache ich das?
 
---
+Ich will Werbegeschenke oder Gratiszugaben ab einem bestimmten Warenwert anbieten. Wie mache ich das?
 
-[.collapseBox]
-.*Ich finde meine Eigenschaft nicht im Artikeldatensatz. Wo ist sie?*
---
+Gift cards
 
-Eigenschaften werden je nach Typ in einem anderen Tab verknüpft.
-Öffne den Artikeldatensatz und klicke in der unteren Tab-Leiste auf das Tab *Eigenschaften* oder *Texte*. Welches Tab hängt vom Eigenschaftstyp ab.
+Serial numbers
 
-[cols="1,2", width=100%]
-|===
-|Eigenschaftstyp |Wo wird die Eigenschaft verknüpft?
-
-|Text +
-HTML
-|xref:artikel:artikel-verwalten.adoc#5000[Tab: Texte]
-
-|Kein +
-Ganze Zahl +
-Kommazahl +
-Auswahl +
-Mehrfachauswahl +
-Datum +
-Datei +
-Zeichenkette
-|xref:artikel:artikel-verwalten.adoc#4800[Tab: Eigenschaften]
-|===
-
---
-
-[.collapseBox]
-.*Merkmale, Eigenschaften und Attribute: Was ist der Unterschied?*
---
-
-* xref:artikel:eigenschaften.adoc#100[Merkmale] charakterisieren ganze Artikel.
-Ist also ein Artikel z.B. in rot, blau oder grün erhältlich, dann gilt das Merkmal für alle drei Varianten.
-Merkmale sind wenig flexibel, veraltet und werden schrittweise durch Eigenschaften ersetzt.
-//Wir empfehlen daher, dass du bereits jetzt deine <<Merkmale in Eigenschaften umwandelst>>.
-* xref:artikel:eigenschaften.adoc#500[Eigenschaften] charakterisieren spezifische Varianten.
-Ist also ein Artikel z.B. in rot, blau oder grün erhältlich, dann kann die Eigenschaft für eine, zwei oder alle drei der Varianten gelten.
-Eigenschaften bieten daher mehr Flexibilität.
-* xref:artikel:attribute.adoc#[Attribute] sind zum Beispiel die verschiedene Farben und Größen, in denen deine Produkte erhältlich sind.
-Mit Hilfe von Attributen kannst du deine Produkte charakterisieren und gleichzeitig auch verkaufbare Varianten erzeugen, wie z.B. ein T-Shirt in der Farbe rot und in Größe S.
-
-//lass drin, könnte hilfreich sein als Erklärung Eigenschaft vs Attribute nachdem die Merkmale wegfallen
-//Merkmale und Eigenschaften sind passive Charakteristiken eines Artikels. Das heißt, dass sie nicht an den Warenbestand gekoppelt sind.
-//Attribute hingegen erzeugen verkaufbare Varianten, die alle unterschiedliche Lagerbestände haben können. Beispielsweise kann die rote Variante ausverkauft sein, während die blaue noch auf Lager ist.
-
---
-
-[.collapseBox]
-.*Kann ich Eigenschaften zur Charakterisierung von Lagerorten und Kontakten verwenden?*
---
-
-Ja.
-Eigenschaften können auch für die nähere Charakterisierung von xref:crm:vorbereitende-einstellungen.adoc#eigenschaften-einleitung[Kontakte] oder xref:warenwirtschaft:lager-einrichten.adoc#850[Lagerorte] verwendet werden.
-Klicke auf die Links, um mehr über diese andere Anwendungsfälle zu erfahren.
-
---
-
-[.collapseBox]
-.*Was sind Bestelleigenschaften?*
---
-
-* In plentymarkets werden personalisierte Artikel mit Hilfe von Bestelleigenschaften zum Verkauf angeboten.
-Beispiel: Deine Kunden sollen ein Foto hochladen können, das auf ein T-Shirt gedruckt wird.
-* Bestelleigenschaften sind eine besondere Art von Eigenschaften. Kunden können sie selbst im plentyShop auswählen und mit bestellen.
-
-xref:artikel:personalisierte-artikel.adoc#[Weitere Informationen zur Vorgehensweise].
-
---
-
-
-[.collapseBox]
-.*Kann ich Webshop-Filter anhand von Eigenschaften erstellen?*
---
-
-Ja. Stell dir vor, du hast bereits:
-
-* Eigenschaften wie WLAN oder Bluetooth angelegt.
-* Die Eigenschaften mit den passenden Varianten verknüpft.
-Zum Beispiel, die Bluetooth-Eigenschaft wurde mit deinen Bluetooth-fähigen Produkten verknüpft.
-
-Jetzt kannst du Filter erstellen.
-Zum Beispiel, damit deine Kunden nach Bluetooth-fähigen Produkten im plentyShop filtern können.
-xref:artikel:frontend-artikelsuche-verwalten.adoc#[Weitere Informationen zur Vorgehensweise].
-
---
+Electronics with an age rating
