--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -9,15 +9,11 @@ The *CRM » Messenger (Test phase)* menu is structured as follows:
 
 image::crm:messenger-menu-structure.png[width=640, height=360]
 
-////
-TODO: farblich markierten Screenshot einfügen.
-////
-
 * *Navigation*: Here you can navigate through different parts of the menu. The currently selected area (blue background) is displayed in the main window on the right. Click on icon:menu[set=material] to expand or collapse the navigation bar. +
 ** Available areas in the navigation: icon:add[set=material] *New message*, Inbox, <<#new-messages, New messages>>, <<#my-messages, My messages>>, <<#trash, Trash>>.
 * *Toolbar*: Here you can <<#search-message, search>> for messages, <<#configure-columns, adjust the columns in the overview>>, set the results to be shown per page and click through the pages with the messages.
 * *Main window*: Here you can see whichever area is currently open. +
-** *Overview*: When you start a search, you’ll see the results in an overview. The overview provides information about the conversations found at a glance. You see, for example, the email addresses of the senders, the subject, the date when the message was received, the assigned tags and the number of attachments. +
+** *Overview*: When you start a search, you’ll see the results in an overview. The overview provides information about the conversations found at a glance. You see, for example, the email addresses of the senders, the subject, the date when the message was received, the assigned tags and by means of the icon icon:attach_file[set=material], you can see whether the message has an attachment. +
 ** *Detail view*: When you open a message, the details will become visible below the main window. The detail view of a message is divided into the conversation, i.e. the message stream, and the editor where you type in your replies.
 
 [discrete]
@@ -32,7 +28,7 @@ You can find the following improvements in the new Messenger that haven’t been
 * Sending emails to your customers
 * Using the group function in the Messenger
 * Possibility to subscribe for conversations and receive notifications regarding new messages within this conversation
-* Display in the back end when other system users are replying to a message
+  Display in the back end when other system users are replying to a message
 --
 
 [#preparatory-settings]
@@ -108,6 +104,10 @@ In this step, you can see the progress of the verification process. plentymarket
 [discrete]
 ==== Settings for the email despatch
 
+////
+ehemals: SMTP-Konfiguration
+////
+
 In this step, save the login details of the email inbox from which you want to send emails so that your plentymarkets system can send emails such as order or shipping confirmations from this email address. 
 
 After having entered the login details (host name, user name, port, password), select the encryption method and enter the sender email address and the sender name. This email address and this name will be shown to the recipients of your emails from this inbox.
@@ -129,6 +129,10 @@ The following Messenger-related variables are available in the EmailBuilder:
 [#settings-email-receipt]
 [discrete]
 ==== Settings for receiving emails
+
+////
+ehemals: Inbox configuration
+////
 
 In this step, you select one or multiple tags that should be assigned to the messages when these messages are received from the forwarded addresses.
 
@@ -337,6 +341,7 @@ You can have the following columns displayed in the overview of the Messenger:
 
 |[#intable-overview-referrer]*Referrer*
 |Shows with the symbol the referrer of the message. +
+Possible values: *Back end*, *REST*, *Plugin*, *PayPal Plugin*.
 
 |[#intable-overview-relations]*Relations*
 |The conversation relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
@@ -352,19 +357,19 @@ You can have the following columns displayed in the overview of the Messenger:
 
 |[#intable-overview-tags]*Tags*
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
- 
 
 |[#intable-overview-attachments]*Attachments*
-|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your mouse over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of orders.
+|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of orders.
 
 |[#intable-overview-billed-messages]*Billed messages*
-|The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your mouse over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
+|The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
 
 |[#intable-overview-billed-minutes]*Billed minutes*
-|The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your mouse over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
+|The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
 
 |[#intable-overview-subscribed]*Subscribed*
 |The symbol icon:done[set=material] in the column icon:notifications[set=material] shows whether you have <<#subscribe-conversation, subscribed for>> the conversation.
+   
 
 |[#intable-overview-context-menu]*Context menu*
 |Allows to edit conversations in the overview using the <<#context-menu, context menu>>.
@@ -548,7 +553,7 @@ Deleting a conversation:
 [#bill-message]
 == Billing a message
 
-You can bill a message if it is _not_ a whispered message.
+You can always bill a message if it is a whispered message.
 
 [.instruction]
 Billing a message:
@@ -575,9 +580,18 @@ Billing a message:
 
 You already know the <<#context-menu, context menu for the conversations>> that is described earlier on this page. Of course, you can also edit single messages using a context menu. Proceed as described in the following sub-chapters.
 
+////
+TODO: Screenshot von einer einzelnen Nachricht mit den Mini-Icons hier einfügen und erklären.
+--> Absender / Datum / Uhrzeit ohne Sekunden / Tag-Namen (getrennt durch |-Zeichen) / Anhang-Symbol (Anzahl sichtbar beim drüber hovern) / Uhr-Symbol, Kreditkarten-Symbol und Anzahl der Minuten im Fall einer abgerechneten Nachricht.
+////
+
 [[image-messenger-edit-single-message]]
 .Editing a single message via the context menu
 image::crm:messenger-edit-single-message.png[width=640, height=360]
+
+////
+TODO: Screenshot "crm:messenger-edit-single-message.png" erneuern, da mittlerweile die Funktion zum Öffnen der Nachricht im plain text über den Pfeil hinzugekommen ist und die Funktion Anhänge herunterladen im Kontextmenü ergänzt wurde.
+////
 
 Once you selected a message within a conversation, you can display the messages’ content in plain text format by clicking on icon:chevron_right[set=material] at the beginning of the message. This way, you are able to see a preview of the message content already without <<#open-single-message, opening>> the entire message.
 
@@ -600,6 +614,10 @@ Assigning tags to the message:
 . Click on icon:local_offer[set=material] *Assign tags to message* to see a list of all tags that you have already <<#tags-messenger, created>> for the areas *Messages* and *Messages (billable)*. +
 *_Tip:_* If you have created a lot of tags for the *Messages* or *Messages (billable)* areas, enter the name of the tag in the search field *Search for tag*.
 . Select (icon:check_box[set=material, role=skyBlue]) the tags that you want to assign to the message. 
+
+////
+FRAGE: Kann man hier wirklich nur einer einzelnen Nachricht einen Tag zuweisen oder bekommt dann die gesamte Konversation auch den Tag zugewiesen? Wenn nur die Nachricht den Tag erhält, wie verhält es sich dann mit den Filtern in der Suche? Wird der Tag an einzelnen Nachrichten in der Suche berücksichtigt? 
+////
 
 [#attachments-single-message]
 === Downloading attachments
@@ -634,6 +652,10 @@ Deleting a single message:
 . Click on *Yes*. +
 → The conversation is deleted and moved to <<#trash, trash>>.
 
+////
+FRAGE: Wird die einzelne gelöschte Nachricht auch in den Papierkorb verschoben? Konnte ich im System nicht nachstellen.
+////
+
 [#group-function]
 == Carrying out the group function
 
@@ -641,7 +663,7 @@ Once you have selected a message in the overview (icon:check_box[set=material, r
 
 [[image-messenger-group-functions-conversations]]
 .Group function in the overview
-image::crm:messenger-group-functions-conversations.png[width=640, height=360]
+image::crm:messenger-group-function.png[width=640, height=360]
 
 [[table-group-functions-messenger]]
 .Using the group function in the Messenger
@@ -701,19 +723,18 @@ You can have the following columns displayed in the *New messages* folder of the
 |[#intable-new-messages-status]*Status*
 |Shows with the symbol icon:circle[set=material, role=skyBlue] that the message is still unread. Shows with the symbol icon:circle[set=material, role=green] that the message is closed.
 
-
 |[#intable-new-messages-short-id]*Short ID*
 |Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the ID.
 
 |[#intable-new-messages-referrer]*Referrer*
 |Shows with the symbol the referrer of the message. +
+Possible values: *Back end*, *REST*, *Plugin*, *PayPal Plugin*.
 
 |[#intable-new-messages-relations]*Relations*
 |The conversation relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
 
 |[#intable-new-messages-subject]*Subject*
 |Shows the subject of the first message within the conversation.
- 
 
 |[#intable-new-messages-created-at]*Created at*
 |Shows the date and the time when the message was created. Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the date.
@@ -723,16 +744,15 @@ You can have the following columns displayed in the *New messages* folder of the
 
 |[#intable-new-messages-tags]*Tags*
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
- 
 
 |[#intable-new-messages-attachments]*Attachments*
-|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your mouse over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of orders.
+|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of orders.
 
 |[#intable-new-messages-billed-messages]*Billed messages*
-|The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your mouse over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
+|The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
 
 |[#intable-new-messages-billed-minutes]*Billed minutes*
-|The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your mouse over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
+|The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
 
 |[#intable-new-messages-subscribed]*Subscribed*
 |The column icon:notifications[set=material] shows with the symbol icon:done[set=material] whether you have <<#subscribe-conversation, subscribed for>> the conversation.
@@ -743,6 +763,12 @@ You can have the following columns displayed in the *New messages* folder of the
 |====
 
 Click on the button *Configure columns* (icon:settings[set=material]) on the top right to deactivate the columns that are already shown in the overview.
+
+[TIP]
+.Carrying out the group function
+====
+You can also use the group function in the *New messages* area. The group function in the *New messages* area works the same way as the group function in the *Inbox* area. For further information, refer to the <<#group-function, Using the group function>> chapter.
+====
 
 [#my-messages]
 == My messages
@@ -770,19 +796,18 @@ You can have the following columns displayed in the *My messages* folder of the 
 |[#intable-my-messages-status]*Status*
 |Shows with the symbol icon:circle[set=material, role=skyBlue] that the message is still unread. Shows with the symbol icon:circle[set=material, role=green] that the message is closed.
 
-
 |[#intable-my-messages-short-id]*Short ID*
 |Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the ID.
 
 |[#intable-my-messages-referrer]*Referrer*
 |Shows with the symbol the referrer of the message. +
+Possible values: *Back end*, *REST*, *Plugin*, *PayPal Plugin*.
 
 |[#intable-my-messages-relations]*Relations*
 |The conversation relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
 
 |[#intable-my-messages-subject]*Subject*
 |Shows the subject of the first message within the conversation.
- 
 
 |[#intable-my-messages-created-at]*Created at*
 |Shows the date and the time when the message was created. Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the date.
@@ -792,16 +817,15 @@ You can have the following columns displayed in the *My messages* folder of the 
 
 |[#intable-my-messages-tags]*Tags*
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
- 
 
 |[#intable-my-messages-attachments]*Attachments*
-|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your mouse over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of orders.
+|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of orders.
 
 |[#intable-my-messages-billed-messages]*Billed messages*
-|The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your mouse over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
+|The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
 
 |[#intable-my-messages-billed-minutes]*Billed minutes*
-|The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your mouse over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
+|The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
 
 |[#intable-my-messages-subscribed]*Subscribed*
 |The symbol icon:done[set=material] in the column icon:notifications[set=material] shows whether you have <<#subscribe-conversation, subscribed for>> the conversation.
@@ -813,10 +837,20 @@ You can have the following columns displayed in the *My messages* folder of the 
 
 Click on the button *Configure columns* (icon:settings[set=material]) on the top right to deactivate the columns that are already shown in the overview.
 
+[TIP]
+.Carrying out the group function
+====
+You can also use the group function in the *My messages* area. The group function in the *My messages* area works the same way as the group function in the *Inbox* area. For further information, refer to the <<#group-function, Using the group function>> chapter.
+====
+
 [#trash]
 == Trash 
 
 In the navigation on the left-hand side of the Messenger, you can find the folder icon:delete[set=material] *Trash*. Here you can find all <<#context-menu-delete-conversation, deleted conversations>> and all<<#delete-single-message, deleted messages>>.
+
+//// 
+Wird es in Zukunft möglich sein, alle Nachrichten aus dem Papierkorb mit einem Klick zu entfernen (so wie bei "Papierkorb leeren" in E-Mail-Programmen? Oder werden die Nachrichten automatisch nach einem bestimmten Zeitraum gelöscht? Wird es möglich sein, Nachrichten aus dem Papierkorb "zurückzuholen", wenn ich die Konversation bzw. Nachricht auf "nicht abgeschlossen" setze?
+////
 
 [discrete]
 [#configure-columns-trash]
@@ -839,20 +873,18 @@ You can have the following columns displayed in the trash folder of the Messenge
 |[#intable-trash-status]*Status*
 |Shows with the symbol icon:circle[set=material, role=skyBlue] that the message is still unread. Shows with the symbol icon:circle[set=material, role=green] that the message is closed.
 
-
 |[#intable-trash-short-id]*Short ID*
 |Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the ID.
 
 |[#intable-trash-referrer]*Referrer*
 |Shows with the symbol the referrer of the message. +
-// ** Possible values: 
+Possible values: *Back end*, *REST*, *Plugin*, *PayPal Plugin*.
 
 |[#intable-trash-relations]*Relations*
 |The conversation relations are shown here, for example icon:person[set=material] _Name of the contact (contact ID)_, icon:shopping_cart[set=material] _Order ID_, icon:mail[set=material] _Email address_ and the subscribers of the conversation. In the line of the conversation, click on icon:chevron_right[set=material] to see all available relations at a glance. Click on icon:expand_more[set=material] to close the relation area again. The contact and the order have a direct link to the contact data record respectively to the order.
 
 |[#intable-trash-subject]*Subject*
 |Shows the subject of the first message within the conversation.
- 
 
 |[#intable-trash-created-at]*Created at*
 |Shows the date and the time when the message was created. Right next to the title bar, click on icon:arrow_upward[set=material] or icon:arrow_downward[set=material] to sort the table in ascending or descending order by the date.
@@ -864,13 +896,13 @@ You can have the following columns displayed in the trash folder of the Messenge
 |Shows the <<#context-menu-tags-conversation, tags>> that are assigned to the conversation.
 
 |[#intable-trash-attachments]*Attachments*
-|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your mouse over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of orders.
+|The symbol icon:attach_file[set=material] in the *Number of attachments* (icon:attach_file[set=material]) column shows whether the conversation has attachments. When you hover with your cursor over the symbol, you can see how many attachments the conversation has. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of orders.
 
 |[#intable-trash-billed-messages]*Billed messages*
-|The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your mouse over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
+|The symbol icon:credit_card[set=material] in the *Billed messages* (icon:credit_card[set=material]) column shows whether the conversation has billed messages. When you hover with your cursor over the symbol, you can see the number of billed messages. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed messages.
 
 |[#intable-trash-billed-minutes]*Billed minutes*
-|The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your mouse over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
+|The symbol icon:av_timer[set=material] in the *Billed minutes* (icon:av_timer[set=material]) column shows whether the conversation has billed minutes. When you hover with your cursor over the symbol, you can see the number of billed minutes. Right next to the title bar, click on icon:arrow_upward[set=material] to sort the table by the number of billed minutes.
 
 |[#intable-trash-subscribed]*Subscribed*
 |The symbol icon:done[set=material] in the column icon:notifications[set=material] shows whether you have <<#subscribe-conversation, subscribed for>> the conversation.
@@ -881,3 +913,9 @@ You can have the following columns displayed in the trash folder of the Messenge
 |====
 
 Click on the button *Configure columns* (icon:settings[set=material]) on the top right to deactivate the columns that are already shown in the overview.
+
+[TIP]
+.Carrying out the group function
+====
+You can also use the group function in the trash folder. The group function for the trash folder works the same way as the group function in the *Inbox* area. For further information, refer to the <<#group-function, Using the group function>> chapter.
+====
