ADD more work to the item faq page

--- a/docs/de-de/modules/artikel/pages/faq-pim.adoc
+++ b/docs/de-de/modules/artikel/pages/faq-pim.adoc
@@ -12,6 +12,7 @@ zuletzt bearbeitet 25.05.22
 //ToDo - weitere Fragen selbst ergänzen
 //ToDo - Maik und Brummi fragen, ob sie noch weitere FAQs haben
 //ToDo - alle Anker prüfen
+//ToDo - wenn die neue Artikel-UI als standard eingebunden wird, dann die Antworten der letzte beide Fragen unter Allgemein anpassen
 
 Text
 
@@ -67,18 +68,96 @@ xref:artikel:suche.adoc#[Weitere Informationen].
 
 --
 
-Was macht ein bestimmtes Feld im Artikeldatensatz?
+[.collapseBox]
+.*Was macht ein bestimmtes Feld im Artikeldatensatz?*
+--
 
-Mein Mitarbeiter soll ausschließlich Zugriff auf die Artikeldaten haben (am besten da auch nur Beschreibungen und Bilder).
+//ToDo - sobald die neue Artikel-UI als standard eingebunden wird, dann den Link anpassen, damit es zur neuen Verzeichnis-Seite weiterleitet und auch den Text ab Satz 2 als include einbinden aus der Intro der neuen Verzeichnis-Seite
+
+Wirf einen Blick auf das xref:artikel:import-export-anlage-verzeichnis.adoc#[Verzeichnis der Datenfelder].
+Diese Seite dient als Referenz.
+Sie erklärt die verschiedenen Tabs und Datenfelder eines Artikeldatensatzes.
+Links führen zu weiteren Informationen und Schritt-für-Schritt-Anleitungen, die die einzelnen Datenfelder in einen größeren Zusammenhang stellen.
+
+--
+
+[.collapseBox]
+.*Wie kann ich sicherstellen, dass meine Content-Mitarbeiter nur Artikelbilder und -Texte ändern können, nicht aber andere sensible Daten?*
+--
+
+//ToDo - sobald die neue Artikel-UI als standard eingebunden wird, dann stattdessen die Frage aus der Seite artikel:verzeichnis (FAQ Kapitel) nehmen und als include an beide Stellen einbinden
+
+Personen mit Backend-Zugriffsrechten können nur mit der Artikelverwaltung arbeiten, wenn ein Admin ihnen Zugriff gewährt hat:
+
+. Wende dich an eine Person mit Administratorrechten für das plentymarkets-System.
+. Diese Person öffnet das Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer*.
+. Dann öffnet sie das Benutzerkonto und schaltet die notwendigen Rechte frei.
+* *_Tipp_*: Welche Rechte du genau aktivieren musst, hängt davon ab, was genau der Mitarbeiter tun soll.
+Ein Beispiel für nützliche Rechte eines Content-Mitarbeiters, findest du unten.
+* *_Tipp_*: Bevor du Mitarbeitern pauschale Rechte erteilst, solltest du die fertige Konfiguration in einem Backend-Benutzerkonto testen und sicherstellen, dass sie deinen Anforderungen entspricht.
+. *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+. Sollte das Problem weiterhin bestehen, wende dich an die link:https://forum.plentymarkets.com/c/item/18[Supporter im Forum^].
+
+[cols="1a,1a"]
+|===
+|Berechtigungen |Menü-Sichtbarkeiten
+
+|
+
+* Artikel » [Alle Unterpunkte] » Anzeigen
+* Artikel » [Alle Unterpunkte] » [Weitere Rechte bei Bedarf]
+* Einrichtung » Tag » Anzeigen
+* Einrichtung » Tag » Tag-Verknüpfung » [Alle Unterpunkte]
+
+|
+
+* Artikel » [Alle Unterpunkte]
+* Einrichtung » Einstellungen » Tags
+* Einrichtung » Artikel » [Einzelne Rechte bei Bedarf]
+|===
+
+*_Hinweis_*: Dies sind nur Beispiel-Rechte. Die Liste erhebt keinen Anspruch auf Vollständigkeit.
+
+--
 
 [#200]
 == Preise
 
-Verkaufspreise - Bedingungen - something like that
+[.collapseBox]
+.*Kann ich den Preis für jede Variante einzeln hinterlegen?*
+--
 
-Aufträge manuell und Checkliste für die Verkaufspreise
+Ja.
+Preise werden für einzelne Varianten gespeichert, nicht für den Artikel als Ganzes.
+Beispiel: Wenn du ein T-Shirt in S, M, L und XL verkaufst, kannst du entscheiden, ob die XL-Variante etwas teurer als die anderen sein soll.
 
-Mein Lieferant hat mir eine Datei mit neue EKs geschickt. Wie importiere ich diese neue EK-Preise?
+xref:artikel:preise.adoc#900[Weitere Informationen].
+
+--
+
+[.collapseBox]
+.*Können meine Preise je nach Situation variieren? Kann ein Produkt also auf bestimmten Märkten oder für bestimmte Kunden weniger kosten?*
+--
+
+Ja.
+Verkaufspreise definieren die Bedingungen, unter denen eine Variante zu einem bestimmten Preis verkauft wird. Zum Beispiel kannst du deine Produkte im plentyShop günstiger anbieten als auf Amazon. Oder du kannst deine Produkte günstiger an B2B-Kunden verkaufen als an B2C-Kunden.
+
+xref:artikel:preise.adoc#[Weitere Informationen].
+
+--
+
+[.collapseBox]
+.*Mein Lieferant hat mir eine Datei mit neuen EKs geschickt. Wie kann ich die neuen EK-Preise importieren?*
+--
+
+plentymarkets verfügt über ein Import-Tool.
+Die Idee ist einfach.
+Anstatt Informationen in plentymarkets manuell zu speichern, sammelst du die gleiche Informationen in eine CSV-Datei und importierst diese Datei dann in dein System.
+
+* xref:daten:ElasticSync.adoc#[Weitere Informationen zum Import-Tool].
+* xref:videos:datenimport-mit-elasticsync.adoc#[Video-Tutorial mit einem Beispiel für den Import von EKs].
+* xref:daten:elasticSync-artikel.adoc#2450[Verzeichnis der verfügbaren Zuordnungs- und Abgleichsfelder].
+--
 
 [.collapseBox]
 .*Ich will, dass plentymarkets meine Preise automatisch für mich berechnet. Geht das überhaupt?*
@@ -112,7 +191,7 @@ include::page$preise.adoc[tag=faq-strikethrough-price]
 
 --
 
-Wie mache ich einen Aktionspreis außer nur UVP? Text z.B. alter Preis
+#Wie mache ich# einen Aktionspreis außer nur UVP? Text z.B. alter Preis
 
 [#300]
 == Attribute
@@ -125,7 +204,7 @@ include::page$attribute.adoc[tag=faq-attribute-property-characteristic]
 
 --
 
-Wenn ich Varianten anlegen will, werden all meine bereits angelegte Attribute gar nicht angezeigt. Warum?
+#Wenn ich Varianten# anlegen will, werden all meine bereits angelegte Attribute gar nicht angezeigt. Warum?
 
 [.collapseBox]
 .*Meine Attribute lassen sich nicht löschen. Warum nicht?*
@@ -159,7 +238,7 @@ include::page$attribute.adoc[tag=faq-add-attribute-existing-item]
 
 --
 
-Ich will Varianten erzeugen. Mir werden aber nicht alle Attribute zur Auswahl angeboten. Wo liegt der Fehler?
+#Ich will Varianten# erzeugen. Mir werden aber nicht alle Attribute zur Auswahl angeboten. Wo liegt der Fehler?
 
 [#300]
 == Eigenschaften
@@ -216,30 +295,30 @@ include::page$eigenschaften.adoc[tag=faq-properties-filters]
 [#500]
 == Beschreibungstexte und Bilder
 
-Wie viele Bilder kann ich pro Artikel haben?
+#Wie viele# Bilder kann ich pro Artikel haben?
 
-Maximumgröße eines Artikelbildes
+#Maximumgröße# eines Artikelbildes
 
-Wie kann ich steuern, welche Platzhalterbilder dargestellt werden? Diese Frage auch im plentyShop Bereich
+#Wie kann ich# steuern, welche Platzhalterbilder dargestellt werden? Diese Frage auch im plentyShop Bereich
 
-Ich will meine Bild-URLs personalisieren. Wie geht das?
-
-[.collapseBox]
-.*Ich will die Beschreibungstexte eines Artikels ändern. Wie mach ich das?*
---
-
-
---
+#Ich will meine# Bild-URLs personalisieren. Wie geht das?
 
 [.collapseBox]
-.*Kann ich variantenspezifische Texte hinterlegen?*
+.*#Ich will die# Beschreibungstexte eines Artikels ändern. Wie mach ich das?*
 --
 
 
 --
 
 [.collapseBox]
-.*Ich will viele Bilder hochladen. Wie mache ich das am effizientesten?*
+.*#Kann ich variantenspezifische# Texte hinterlegen?*
+--
+
+
+--
+
+[.collapseBox]
+.*#Ich will viele Bilder# hochladen. Wie mache ich das am effizientesten?*
 --
 
 
@@ -256,33 +335,33 @@ include::page$attribute.adoc[tag=attribute-images-dynamic]
 [#400]
 == Massenbearbeitung
 
-Mein Lieferant hat mir eine Datei mit neue EKs geschickt. Wie importiere ich diese neue EK-Preise?
+#Mein Lieferant hat# mir eine Datei mit neue EKs geschickt. Wie importiere ich diese neue EK-Preise?
 
-Was ist der Unterschied zwischen Gruppenfunktion und Stapelbearbeitung?
-
-[.collapseBox]
-.*Praxisbeispiel: Mein Hersteller hat ein Zubehörteil umbenannt. Wie ändere ich den Namen in allen Artikeltexten?*
---
-
-
---
+#Was ist der Unterschied# zwischen Gruppenfunktion und Stapelbearbeitung?
 
 [.collapseBox]
-.*Praxisbeispiel: Ich muss die Transportkosten aller Artikel eines bestimmten Herstellers erhöhen. Wie mache ich das?*
+.*#Praxisbeispiel#: Mein Hersteller hat ein Zubehörteil umbenannt. Wie ändere ich den Namen in allen Artikeltexten?*
 --
 
 
 --
 
-Ab wann bricht das Stapelverarbeitung ab?
+[.collapseBox]
+.*#Praxisbeispiel#: Ich muss die Transportkosten aller Artikel eines bestimmten Herstellers erhöhen. Wie mache ich das?*
+--
 
-Wie schaut's aus mit FTP
 
-Ich verkaufe bereits auf Amazon, bin aber neu bei plentymarkets. Kann ich meine Artikeldaten von Amazon übernehmen?
+--
 
-Ich verkaufe bereits auf eBay, bin aber neu bei plentymarkets. Kann ich meine Artikeldaten von eBay übernehmen?
+#Ab wann bricht# das Stapelverarbeitung ab?
 
-Gibt es Beispiele für den Import?
+#Wie schaut's aus# mit FTP
+
+#Ich verkaufe bereits# auf Amazon, bin aber neu bei plentymarkets. Kann ich meine Artikeldaten von Amazon übernehmen?
+
+#Ich verkaufe bereits# auf eBay, bin aber neu bei plentymarkets. Kann ich meine Artikeldaten von eBay übernehmen?
+
+#Gibt es Beispiele# für den Import?
 -Videos
 -Artikel + Varianten
 -Kategorien
@@ -294,28 +373,28 @@ Gibt es Beispiele für den Import?
 [#600]
 == Darstellung im plentyShop
 
-Merkblatt oder Broschüre als Download in Shop anbieten
+#Merkblatt oder Broschüre# als Download in Shop anbieten
 
-Cross-Selling
+#Cross-Selling#
 
-Dropdown Text select a variation
-
-[.collapseBox]
-.*Warum ist mein Artikel im plentyShop nicht sichtbar?*
---
-
-
---
+#Dropdown Text# select a variation
 
 [.collapseBox]
-.*Warum ist meine Kategorie im plentyShop nicht sichtbar?*
+.*#Warum ist mein Artikel# im plentyShop nicht sichtbar?*
 --
 
 
 --
 
 [.collapseBox]
-.*Ich bin mit den Suchergebnissen im plentyShop nicht zufrieden. Wie kann ich sie besser machen?*
+.*#Warum ist meine Kategorie# im plentyShop nicht sichtbar?*
+--
+
+
+--
+
+[.collapseBox]
+.*#Ich bin mit den Suchergebnissen# im plentyShop nicht zufrieden. Wie kann ich sie besser machen?*
 --
 
 
@@ -337,7 +416,7 @@ include::page$attribute.adoc[tag=attribute-colour-tiles]
 
 --
 
-Wie viele Kategorie-Ebenen kann ich maximum im Shop haben?
+#Wie viele Kategorie-Ebenen# kann ich maximum im Shop haben?
 
 ////
 [.collapseBox]
@@ -408,14 +487,14 @@ include::page$attribute.adoc[tag=steps-attribute-value-name-translations]
 
 == Fragen zum Sortiment
 
-Wie kann ich herauszufinden, welche Artikel am häufigsten verkauft werden?
+#Wie kann ich herauszufinden#, welche Artikel am häufigsten verkauft werden?
 
-Ich will Produkte kombinieren und als eine Verkaufseinheit anbieten. Wie mache ich das?
+#Ich will Produkte kombinieren# und als eine Verkaufseinheit anbieten. Wie mache ich das?
 
-Ich will Werbegeschenke oder Gratiszugaben ab einem bestimmten Warenwert anbieten. Wie mache ich das?
+#Ich will Werbegeschenke# oder Gratiszugaben ab einem bestimmten Warenwert anbieten. Wie mache ich das?
 
-Gift cards
+#Gift cards#
 
-Serial numbers
+#Serial numbers#
 
-Electronics with an age rating
+#Electronics with an age rating#
