--- a/docs/de-de/modules/daten/partials/catalogue-status-menu.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-status-menu.adoc
@@ -1,6 +1,6 @@
 Wie es um den Export deiner Kataloge steht, siehst du im Menü *Daten » Katalogstatus*.
 
-image::daten:catalogue-status-in-colours.png[]
+// image::daten:catalogue-status-in-colours.png[]
 
 [#overview-status]
 === Navigation
