--- a/docs/de-de/modules/daten/pages/catalogues-status.adoc
+++ b/docs/de-de/modules/daten/pages/catalogues-status.adoc
@@ -44,7 +44,7 @@ Du befindest dich im Menü *Daten » Katalogexportstatus*. Wenn du das Menü öf
 * Abgeschlossen = Der Exportvorgang ist abgeschlossen.
 
 | *Fortschritt*
-| Zeigt den Fortschritt des Exportvorgangs an. Wenn der Export noch läuft, wird angezeigt, wie viele Jobs bereits verarbeitet wurden.
+| Zeigt den Fortschritt des Exportvorgangs an. Wenn der Export noch läuft, wird angezeigt, wie viele Jobs bereits verarbeitet wurden. +
 *_Wichtig:_* Exporte des Typs *Direkt* und *Debug* werden sofort ausgeführt. Für diese Exporte wird kein Fortschrittsbalken angezeigt.
 
 //tag::what-is-a-job[]
@@ -58,7 +58,7 @@ Bei Exporten des Typs *Asynchron* werden die zu exportierenden Daten vor dem Exp
 //end::what-is-a-job[]
 
 | *Fehler*
-| Anzahl der Fehler +
+| Wie viele Fehler sind beim Export aufgetreten? +
 *_Tipp:_* Klicke auf den Export, um <<#status-details, Details anzuzeigen>>.
 
 | *Erfolgreiche Jobs*
@@ -71,7 +71,7 @@ include::page$catalogues-status.adoc[tag=what-is-a-job]
 
 * *Benutzer:in* = Der Exportvorgang wurde von einer Benutzer:in gestartet. Wenn du mit der Maus auf den Namen der Person zeigst, wird auch die Benutzer:innen-ID angezeigt.
 * *Cron* = Der Exportvorgang wurde automatisch durch einen Cron gestartet.
-* *Debug* = Der Exportvorgang wurde 
+* *Debug* = Der Exportvorgang wurde
 
 | *Startzeit*
 | Wann wurde der Exportvorgang gestartet?
@@ -127,6 +127,8 @@ Standardmäßig werden alle Exporte außer Exporte des Typs *Dev-Cache* angezeig
 == Detailansicht
 
 Klicke auf einen Export, um Details zum Exportvorgang anzuzeigen.
+
+// TODO: Insert Screenshot of Details view.
 
 [[table-status-details]]
 .Detailansicht des Exports
